# palindrome

./: Cargo.toml  README.md
benches/: palindrome_benchmark.rs
src/: lib.rs
